fixed bugs with width so that no horizontal scroll appears

--- a/css/main.css
+++ b/css/main.css
@@ -553,11 +553,16 @@ img {
   font-weight: 900;
   line-height: 1.6;
   margin: 0 auto 30px auto;
-  width: 360px;
+  width: 100%;
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
   color: var(--white);
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    width: 360px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
@@ -1037,8 +1042,8 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
-  height: 92px;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--social-link);
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
