--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -35,8 +35,8 @@
 .client-list__link {
     @include flex-centered();
    
-    width: 210px;
-    height: 92px;
+    width: 100%;
+    height: 100%;
 
     border: 1px solid var(--social-link);
     border-radius: 4px;
